# cauldron

./: .gitmodules  Cargo.toml  README.md  notes.md
.cargo/: config.toml
.github/workflows/: build.yml
crates/cauldron/: Cargo.toml
crates/cauldron-container/: Cargo.toml
crates/cauldron-container/src/: lib.rs
crates/cauldron/src/: config.rs  core_plugin.rs  core_ui.rs  lib.rs  loader.rs  metadata.rs  prelude.rs  util.rs  version.rs
crates/focus/: Cargo.toml  README.md
crates/focus/shader/: egui.hlsl  old_egui.hlsl  original_frag.glsl  original_vertex.glsl
crates/focus/src/: lib.rs  util.rs
crates/focus/src/editor/: glam_widgets.rs  mod.rs  widgets_demo_window.rs
crates/focus/src/egui_d3d12/: buffer.rs  fence.rs  input.rs  message_filter.rs  mod.rs  painter.rs  pipeline.rs  texture.rs  util.rs
crates/focus/src/hooks/: dx12.rs  mod.rs
crates/focus/src/renderer/: input.rs  mod.rs  msg_filter.rs  pipeline.rs
crates/focus/src/renderer/backend/: dx12.rs  mod.rs  texture.rs
crates/hello-cauldron/: Cargo.toml  hello.cauldron.toml
crates/hello-cauldron/src/: lib.rs
crates/legacy/: Cargo.toml  legacy.cauldron.toml
crates/legacy/src/: hooks.rs  lib.rs
crates/libdecima/: Cargo.toml  README.md  build.rs
crates/libdecima/data/: hfw.json
crates/libdecima/src/: lib.rs  util.rs
crates/libdecima/src/mem/: mod.rs  offsets.rs  scan.rs
crates/libdecima/src/types/: mod.rs
crates/libdecima/src/types/decima/: manual_types.rs  mod.rs
crates/libdecima/src/types/decima/core/: ai_faction.rs  camera_entity.rs  entity.rs  entity_component.rs  enums.rs  exported_symbols.rs  factory_manager.rs  g_core.rs  mod.rs  mover.rs  player.rs  rot_matrix.rs  rtti.rs  rtti_object.rs  rtti_ref_object.rs  streaming_ref.rs  vec.rs  weak_ptr.rs  world_position.rs  world_transform.rs
crates/libdecima/src/types/decima/p_core/: array.rs  gguuid.rs  mod.rs  reference.rs  string.rs
crates/libdecima/src/types/nixxes/: log.rs  mod.rs  nx_d3d.rs  nx_d3d_driver.rs  nx_dxgi.rs
crates/libdecima/src/types/rtti/: mod.rs  symbols.rs
crates/minhook/: Cargo.toml  README.md  build.rs
crates/minhook/src/: lib.rs
crates/pattern16/: Cargo.toml  build.rs  wrapper.hpp
crates/pattern16/pat16/: pat16.cpp  pat16.h
crates/pattern16/src/: bindings.rs  lib.rs
crates/pulse/: Cargo.toml  pulse.cauldron.toml
crates/pulse/src/: ida.rs  ida_export.rs  json.rs  lib.rs  memory.rs  types.rs
crates/pulse/src/p_core/: array.rs
crates/version-shim/: Cargo.toml
crates/version-shim/src/: lib.rs
crates/winhttp-shim/: Cargo.toml
crates/winhttp-shim/src/: lib.rs
ida/: HZR2_RTTI.hpp  README.md
ida/hzr2/: CameraEntity.hpp  Destructibility.hpp  Entity.hpp  EntityComponent.hpp  IStreamingManager.hpp  Mover.hpp  PCore.hpp  PhysicsCollisionListener.hpp  PhysicsConstraintListener.hpp  Player.hpp  Prelude.hpp  RTTI.hpp  RTTIObject.hpp  RTTIRefObject.hpp  RotMatrix.hpp  Vec.hpp  WeakPtr.hpp  WorldPosition.hpp  WorldTransform.hpp  enums.hpp
schemas/: cauldron-main.json  cauldron-v0.json
xtask/src/: main.rs
