[workspace]
resolver = "3"
members = [
    "crates/cauldron",
    "crates/cauldron-container",
    "crates/focus",
    "crates/hello-cauldron",
    "crates/legacy",
    "crates/libdecima",
    "crates/minhook",
    "crates/pulse",
    "crates/version-shim",
    "xtask",
]

[workspace.package]
version = "0.1.0-alpha"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Pyrrha Wills <pyrrha.social@gmail.com>"]

[workspace.dependencies]
cauldron = { version = "0.1.0-alpha", path = "crates/cauldron" }
focus = { version = "0.1.0-alpha", path = "crates/focus" }
libdecima = { version = "0.1.0-alpha", path = "crates/libdecima" }
minhook = { version = "1.0.0", path = "crates/minhook" }

cc = "1.2.3"
libc = "0.2.168"
libloading = "0.8.6"
log = "0.4.22"
once_cell = "1.20.2"
paste = "1.0.15"
semver = "1.0.23"
simplelog = "0.12.2"
windows = "0.60.0"
windows-sys = "0.59.0"
egui = "0.31.0"
egui_extras = { version = "0.31.0", features = ["image"] }
catppuccin-egui = { version = "5.3.1", git = "https://github.com/JustPyrrha/catppuccin-egui.git", features = ["egui31"], default-features = false }
toml = "0.8.19"
serde = "1.0.217"
