[package]
name = "cauldron"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A decima engine plugin loader."

[dependencies]
libloading.workspace = true
log.workspace = true
semver.workspace = true
simplelog = { workspace = true, features = ["paris"] }
tabled = "0.17.0"
egui.workspace = true
focus.workspace = true
egui_extras = { workspace = true, features = ["default", "image"] }
#catppuccin-egui = { version = "5.3.1", default-features = false, features = ["egui29"] }
image.workspace = true
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_System_Console"] }
windows = { workspace = true, features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
toml_edit = "0.22.22"