[package]
name = "focus"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
egui.workspace = true
egui_extras = { workspace = true, features = ["default", "image"] }
minhook.workspace = true
parking_lot = "0.12.3"
once_cell = "1.20.2"
bitflags = "2.6.0"
libdecima.workspace = true
windows-core = "0.60.1"
catppuccin-egui.workspace = true

[dependencies.windows]
workspace = true
features = ["Win32_Graphics_Dxgi_Common", "Win32_System_Memory", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D_Fxc", "Win32_Graphics_Direct3D12", "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_Security", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input", "Win32_System_DataExchange", "Win32_System_WindowsProgramming", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemInformation", "Win32_System_Ole", "Wdk_System_SystemInformation"]
