[package]
name = "legacy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Py's HFW expriments."

[lib]
crate-type = ["cdylib"]

[dependencies]
cauldron.workspace = true
libdecima = { workspace = true, features = ["hfw"] }
minhook.workspace = true
once_cell = "1.20.2"