[package]
name = "libdecima"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Generated bindings for Decima RTTI types."

#[build-dependencies]
#codegen = "0.2.0"
#serde = { version = "1.0.217", features = ["derive"] }
#serde_json = "1.0.135"
#chrono = "0.4.39"
#syn = "2.0.96"
#change-case = "0.2.0"

[dependencies]
bitflags = "2.8.0"
windows = { workspace = true, features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_Diagnostics_Debug", "Win32_System_SystemInformation", "Win32_System_SystemServices", "Win32_System_Kernel"] }

[features]
default = []

nixxes = []

# Supported Games
hfw = ["nixxes"] # Horizon Forbidden West
