[package]
name = "pulse"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A Cauldron plugin to dump GGRTTI types."

[lib]
crate-type = ["cdylib"]

[dependencies]
cauldron.workspace = true
windows = { workspace = true, features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_LibraryLoader", "Win32_System_Diagnostics_Debug", "Win32_System_SystemInformation", "Win32_System_SystemServices", "Win32_UI_Input_KeyboardAndMouse"] }
libc.workspace = true
json-writer = "0.4.0"
minhook.workspace = true
libdecima = { workspace = true, features = ["hfw"] }
once_cell = "1.20"
