[package]
name = "pulse"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A Cauldron plugin to dump GGRTTI types."

[lib]
crate-type = ["cdylib"]

[dependencies]
cauldron.workspace = true
anyhow.workspace = true
json-writer = "0.4.0"
libdecima.workspace = true
minhook.workspace = true
once_cell.workspace = true

[features]
default = []

# enable int3 software breakpoints
debug_breakpoints = []