[package]
name = "version-shim"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A lightweight shim for version.dll"

[lib]
name = "version"
crate-type = [ "cdylib" ]

[dependencies]
libc.workspace = true
once_cell.workspace = true
paste.workspace = true

[dependencies.windows-sys]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices"
]